--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^2.5.4",
     "express": "^4.17.1",
     "ionic4-auto-complete": "^2.6.0",
+    "jspdf": "^2.3.1",
     "material-icons": "^0.3.1",
     "moment": "^2.24.0",
     "ngx-currency": "^2.5.2",
