--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/file": "^5.22.0-beta-1",
     "@ionic-native/in-app-browser": "^5.30.0",
     "@ionic-native/local-notifications": "^5.30.0",
+    "@ionic-native/printer": "^5.31.1",
     "@ionic-native/social-sharing": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -67,6 +68,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-printer": "^0.8.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.4",
@@ -100,7 +102,8 @@
       "cordova-plugin-local-notification": {},
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      }
+      },
+      "cordova-plugin-printer": {}
     },
     "platforms": [
       "android"
